Fixed bug in generating response

--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -42,6 +42,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #project-columns input[type=checkbox] + label { display:inline !important; }
 
+#copy-job-options input[type=radio] + label {display: inline !important;}
+
+
 .job-title, .job-instructions{
     width: 300px;
 }
@@ -112,10 +115,7 @@ label {
 	border: 2px solid #000;
 }
 
-#title-warning, #instructions-warning {
+.warning {
 margin-left: 2px;
-color: red;
+color: #696565;
     }
-
-
-
