--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -29,7 +29,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 @import-less url("../theme.less");
 
-#project-columns {
+.project-columns {
     -moz-column-count: 2;
     -moz-column-gap: 3px;
     -webkit-column-count: 2;
@@ -40,7 +40,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     overflow:auto;
 }
 
-#project-columns input[type=checkbox] + label { display:inline !important; }
+.project-columns input[type=checkbox] + label { display:inline !important; }
 
 #copy-job-options input[type=radio] + label {display: inline !important;}
 
@@ -64,16 +64,16 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     margin-bottom: 4px;
     }
 
-#columns-menu {
+#columns-menu-0, #columns-menu-1 {
     background-color: #FAF7F8;
     margin-bottom: 5px;
     }
 
-#columns-menu a {
+.columns-menu a {
     padding-right: 5px;
     }
 
-#cmlPreviewPanel {
+#cml-preview-panel-0,#cml-preview-panel-1 {
     background-color:#FCFCFC;
     border: 1px solid #ddd;
     height: 110px;
