--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -29,6 +29,14 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 @import-less url("../theme.less");
 
+#columns-dialog {
+    background: #fff;
+    color: #000;
+}
+
+#columns-dialog input[type=radio] +label {display: block !important;}
+
+
 .project-columns {
     -moz-column-count: 2;
     -moz-column-gap: 3px;
