Template for freebase reconciliation evaluation

--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -89,9 +89,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     }
 
 label {
-    width:100px;
+	width: 150px;
     float:left;
     text-align:left;
+    margin-left: 5px;
 }
 
 .wrapper {
@@ -128,6 +129,7 @@ margin-left: 2px;
 color: #696565;
     }
 
-.check {
-    color: green;
-    }
+.ui-widget-content a.link-menu {
+	font-size:1.2em;
+	font-weight: bold;
+}
