--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -54,7 +54,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
 .job-title, .job-instructions{
-    width: 300px;
+    width: 280px;
 }
 .job-instructions{
     height: 50px;
@@ -88,7 +88,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     overflow:auto;
     }
 
-.job_box label {
+.field-container label {
 	width: 150px;
     float:left;
     text-align:left;
@@ -129,7 +129,37 @@ margin-left: 2px;
 color: #696565;
     }
 
-.ui-widget-content a.link-menu {
-	font-size:1.2em;
+.options-menu {
+	height: 30px;
+	margin: 2px;
+	clear:both;
+}
+
+.options-menu ul{
+	margin:0;
+	padding:0;
+}
+.options-menu ul li  {
+	margin:2px;
+	height:20px;
+}
+
+.options-menu li.link-menu a {
+	padding:3px;
+}
+
+.options-menu li.link-menu {
+	width:150px;
+	text-align:center;
+	background-color:@fill_secondary;
+	
+	font-size:1em;
 	font-weight: bold;
+	border:1px solid #cdcdcd;
+	display:block;
+	float:left;
+}
+
+select#all-jobs {
+	width:300px;
 }
