Updated uploading to templated job

--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -57,7 +57,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     width: 280px;
 }
 .job-instructions{
-    height: 50px;
+    height: 100px;
     }
 
 .job-box {
@@ -119,9 +119,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #status-message {
 	clear: both;
 	width: 100%;
-	height: 50px;
+	height: 30px;
 	color:#001100;
-	border: 2px solid #000;
+	border: 1px solid #000;
 }
 
 .warning {
@@ -145,7 +145,7 @@ color: #696565;
 }
 
 .options-menu li.link-menu a {
-	padding:3px;
+	vertical-align:middle;
 }
 
 .options-menu li.link-menu {
