Fixed minor issues with showing columns/fields

--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -48,6 +48,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     overflow:auto;
 }
 
+.project-columns.small {
+    -moz-column-count: 2;
+    -moz-column-gap: 2px;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 2px;
+    column-count: 2;
+    column-gap: 2px;
+    height: 70px;
+    overflow:auto;
+}
+
 .project-columns input[type=checkbox] + label { display:inline !important; }
 
 #copy-job-options input[type=radio] + label {display: inline !important;}
