--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -59,6 +59,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     overflow:auto;
 }
 
+.project-columns.tiny {
+    -moz-column-count: 1;
+    -moz-column-gap: 2px;
+    -webkit-column-count: 1;
+    -webkit-column-gap: 2px;
+    column-count: 1;
+    column-gap: 2px;
+    height: 50px;
+    overflow:auto;
+}
+
 .project-columns input[type=checkbox] + label { display:inline !important; }
 
 #copy-job-options input[type=radio] + label {display: inline !important;}
