Added fields for CF job

--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -185,3 +185,19 @@ color: #696565;
 select#all-jobs {
 	width:300px;
 }
+
+
+/* 
+    jQuery UI - dialog for errors and confirmations
+    Replacement for ugly default alert
+*/
+.confirmation-head {
+  font: 16px bold;
+  margin-bottom: 5px;
+}
+
+.confirmation-message {
+  font: 12px italic, serif;
+  margin: 2px;
+  padding: 2px;
+}
