--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -138,14 +138,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     clear: right;
     }
 
-#status-message {
-	clear: both;
-	width: 100%;
-	height: 30px;
-	color:#001100;
-	border: 1px solid #000;
-}
-
 .warning {
 margin-left: 2px;
 color: #696565;
@@ -184,6 +176,14 @@ color: #696565;
 
 select#all-jobs {
 	width:300px;
+}
+
+
+#msg-frame {
+    clear: both;
+    height: 30px;
+    border: 1px solid #000;
+    padding: 3px;
 }
 
 
