Added loading of instructions and cml from escaped html files

--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -192,12 +192,15 @@ select#all-jobs {
     Replacement for ugly default alert
 */
 .confirmation-head {
-  font: 16px bold;
+  font-size: 16px;
+  font-weight: bold;
   margin-bottom: 5px;
+  border-bottom: 1px dashed #ccc;
 }
 
 .confirmation-message {
-  font: 12px italic, serif;
+  font-size: 14px;
+  font-decoration: italics;
   margin: 2px;
   padding: 2px;
 }
