--- a/module/scripts/templates/image-recon/instructions.html
+++ b/module/scripts/templates/image-recon/instructions.html
@@ -1,7 +1,20 @@
-<div>&lt;p&gt;Find &lt;strong&gt;best matching Wikipedia page &lt;/strong&gt;for the following combination of image, description and destination URL. &lt;/p&gt;
-&lt;p&gt;Example:
-&lt;img src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Annex_Esstisch_Ma%C3%9Ftisch_aus_Massivholz.jpg/320px-Annex_Esstisch_Ma%C3%9Ftisch_aus_Massivholz.jpg" width="320"&gt; &lt;br/&gt;
-&lt;strong&gt;Description:&lt;/strong&gt; Solid wood dining table&lt;br/&gt;
-&lt;strong&gt;Destination URL:&lt;/strong&gt; &lt;a href="http://www.houzz.com/photos/dining-tables"&gt;http://www.houzz.com/photos/dining-tables&lt;/a&gt;&lt;br/&gt;
-&lt;/p&gt;
-</div>
+<p><span class="badge">1</span> Take a good look at the image, <span class="badge">2</span> answer the questions and <span class="badge badge-important">3</span> find the <strong>best matching Wikipedia page </strong>for the combination of image, description and destination webpage. </p>
+<h3>Example</h3>h3>
+<p>
+<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Annex_Esstisch_Ma%C3%9Ftisch_aus_Massivholz.jpg/320px-Annex_Esstisch_Ma%C3%9Ftisch_aus_Massivholz.jpg" width="320"> <br/>
+<strong>Description:</strong> Solid wood dining table<br/>
+<strong>Destination webpage:</strong> <a href="http://www.houzz.com/photos/dining-tables">http://www.houzz.com/photos/dining-tables</a><br/>
+</p>
+<p><strong>Image matches description:</strong> <br/>
+yes, completely<br/>
+<small><span class="text-success">Wood dining table is the main object in the image.</span></small><br/><br/>
+<strong>Image matches the content at the destination URL:</strong><br/>
+yes, but webpage is more general<br/>
+<small><span class="text-success">Webpage is about dining tables, not only the wooden ones</span></small><br/><br/>
+<strong>Tag the image:</strong> dining tables, modern dining room tables, solid wood dinning tables<br/></p>
+<p><strong>Wikipedia page match for image:</strong><br/>
+<span class="label label-important">Wrong: </span> http://en.wikipedia.org/wiki/Table<br/>
+<small><span class="text-error">This page is a disambiguation page, find a specific page</span></small><br/><br/>
+<span class="label label-success">Correct: </span> http://en.wikipedia.org/wiki/Dining_table<br/>
+<small><span class="text-success">This is the most specific Wikipedia page for this image, description and destination webpage</span></small>
+</p>
