Fixed error messaging

--- a/module/scripts/templates/image-recon/cml.html
+++ b/module/scripts/templates/image-recon/cml.html
@@ -16,6 +16,5 @@
     <cml:option label="no, not at all, they are totally different" id="different"/>
   </cml:select>
   
-  
-<cml:text label="Tag the image" class="" instructions="Out here keywords that best describe the image (separated by a comma)" validates="alpha"/>
-<cml:text label="Wikipedia page match for image" class="" instructions="Paste URL of a Wikipedia page that is a best match for the image content" validates="required url" gold="wiki"/>
+<cml:text label="Tag the image" class="" instructions="Enter keywords that best describe the image (separated by a comma)" validates="alpha"/>
+<cml:text label="Wikipedia page match for image" class="" instructions="Paste URL of a Wikipedia page that is a best match for the image content" validates="required url" gold="wiki_gold"/>
