--- a/module/styles/dialogs/crowdflower-gui.less
+++ b/module/styles/dialogs/crowdflower-gui.less
@@ -91,7 +91,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .job-box h2,h3 {
     padding-top: 2px;
     padding-bottom: 2px;
-    margin-bottom: 4px;
+    margin-bottom: 2px;
+    line-height: 20px;
     }
 
 #columns-menu-0, #columns-menu-1 {
