--- a/module/scripts/templates/image-recon/instructions.html
+++ b/module/scripts/templates/image-recon/instructions.html
@@ -1,5 +1,8 @@
-<p><span class="badge">1</span> Take a good look at the image, <span class="badge">2</span> answer the questions and <span class="badge badge-important">3</span> find the <strong>best matching Wikipedia page </strong>for the combination of image, description and destination webpage. </p>
-<h3>Example</h3>h3>
+<p><span class="badge">1</span> Take a good look at the image, <br/>
+<span class="badge">
+2</span> answer questions and <br/>
+<span class="badge badge-important">3</span> find the <strong>best matching Wikipedia page (in English) </strong>for the combination of image, description and destination webpage. </p>
+<h3>Example</h3>
 <p>
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Annex_Esstisch_Ma%C3%9Ftisch_aus_Massivholz.jpg/320px-Annex_Esstisch_Ma%C3%9Ftisch_aus_Massivholz.jpg" width="320"> <br/>
 <strong>Description:</strong> Solid wood dining table<br/>
