Generating suggestions when less than 3 suggestions

--- a/module/scripts/templates/recon-eval/cml.html
+++ b/module/scripts/templates/recon-eval/cml.html
@@ -3,7 +3,7 @@
 <a href="{{link}}" target="_blank" id="">{{link}}</a>
 </p>
 <br /><hr />
-<p>&#xA0;Check suggested links <strong>FIRST</strong>strong>:</p>
+<p>&#xA0;Check suggested links <strong>FIRST</strong>:</p>
 <ol type="1"><li>Suggestion 1: <a href="{{suggestion_url_1}}" target="_blank">{{suggestion_name_1}}</a></li>
 <li>Suggestion 2: <a href="{{suggestion_url_2}}" target="_blank">{{suggestion_name_2}}</a></li>
 <li>Suggestion 3: <a href="{{suggestion_url_3}}" target="_blank">{{suggestion_name_3}}</a></li>
